--- a/src/main/resources/templates/mypage/schedule.html
+++ b/src/main/resources/templates/mypage/schedule.html
@@ -33,11 +33,11 @@
         <div class="nowschedule">
           <h2 class="title">시간표</h2>
           <div class="lastupdate">
-            <span>06/25 14:12</span> 변경
+            <span th:text="${member.loginId}">06/25 14:12</span>
           </div>
           <div class="wrapping_option">
             <a class="option">
-              <span class="material-icons">settings</span>설정
+              <span class="material-icons">settings</span>
             </a>
           </div>
         </div>
