--- a/src/main/resources/static/css/mainpage.css
+++ b/src/main/resources/static/css/mainpage.css
@@ -351,3 +351,16 @@ a:active{
   border-right:1px solid #e3e3e3;
   box-sizing:border-box;
 }
+
+.td0, .td1, .td2, .td3, .td4 {
+  position: relative;
+}
+
+.schedule-item {
+  position: absolute;
+  font-weight: bold;
+  color: #2c3e50; /* 어두운 회색조 */
+  background-color: #f5f5f5; /* 예시 색상 */
+  border: 1px solid #ddd; /* 예시 테두리 */
+  width: 88px; /* 너비를 명시적으로 설정 */
+}
