--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Extend</title>
     <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/mainpage.css">
@@ -36,6 +37,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script defer src="/js/main.js"></script>
     <script defer src="/js/calendar.js"></script>
+    <script defer src="/js/timeTableMain..js"></script>
 </head>
 <body>
 <header th:if="${loggedIn}">
@@ -313,7 +315,7 @@
                                     </div>
                                 </div>
                             </th>
-                            <td>
+                            <td class="td0">
                                 <div class="grid"></div>
                                 <div class="grid"></div>
                                 <div class="grid"></div>
@@ -330,7 +332,7 @@
                                 <div class="grid"></div>
                                 <div class="grid"></div>
                             </td>
-                            <td>
+                            <td class="td1">
                                 <div class="grid"></div>
                                 <div class="grid"></div>
                                 <div class="grid"></div>
@@ -347,7 +349,7 @@
                                 <div class="grid"></div>
                                 <div class="grid"></div>
                             </td>
-                            <td>
+                            <td class="td2">
                                 <div class="grid"></div>
                                 <div class="grid"></div>
                                 <div class="grid"></div>
@@ -364,7 +366,7 @@
                                 <div class="grid"></div>
                                 <div class="grid"></div>
                             </td>
-                            <td>
+                            <td class="td3">
                                 <div class="grid"></div>
                                 <div class="grid"></div>
                                 <div class="grid"></div>
@@ -381,7 +383,7 @@
                                 <div class="grid"></div>
                                 <div class="grid"></div>
                             </td>
-                            <td>
+                            <td class="td4">
                                 <div class="grid"></div>
                                 <div class="grid"></div>
                                 <div class="grid"></div>
