header 디자인수정

--- a/src/main/resources/templates/fragments/header-after.html
+++ b/src/main/resources/templates/fragments/header-after.html
@@ -39,13 +39,28 @@
                     </li>
                     <li class="main_category_community">
                         <a href="/board/board_collection" class="main_category_name">
-                            커뮤니티
+                            학교 커뮤니티
                         </a>
                         <div class="sub_category_community hide">
                             <div class="wrap_sub_category_community">
                                 <a href="/board/FREE" class="sub_menu_content">자유게시판</a>
-                                <a href="/board/QNA" class="sub_menu_content">질문, 답변게시판</a>
+                                <a href="/board/FRESH" class="sub_menu_content">새내기게시판</a>
                                 <a href="/board/MARKET" class="sub_menu_content">장터게시판</a>
+                                <a href="/board/FOSSIL" class="sub_menu_content">졸업생게시판</a>
+                                <a href="/board/INFO" class="sub_menu_content">정보게시판</a>
+                                <a href="/board/CAREER" class="sub_menu_content">취업 및 진로게시판</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="main_category_department">
+                        <a href="/board/board_collection" class="main_category_name">
+                            학과 커뮤니티
+                        </a>
+                        <div class="sub_category_department hide">
+                            <div class="wrap_sub_category_department">
+                                <a href="/board/QNA" class="sub_menu_content">질문, 답변게시판</a>
+                                <a href="/board/TIP" class="sub_menu_content">학과꿀팁</a>
+                                <a href="/board/REPORT" class="sub_menu_content">신문고</a>
                             </div>
                         </div>
                     </li>
