--- a/src/main/resources/css/header.css
+++ b/src/main/resources/css/header.css
@@ -18,219 +18,219 @@ a:active{
   color:black;
 }
 
-  .inner {
-    width:1100px;
-    margin: 0 auto;
-    position: relative;
-    background-color: white;
-  }
-  
-  header {
-    /*position: fixed;*/
-    position:relative;
-    top:0;
-    left:0;
-    z-index: 9;
-    width:100vw;
-    border-bottom: 1px solid #0d339a;
-    transform: translate(0, 0)
-  }
-  
+.inner {
+  width:1100px;
+  margin: 0 auto;
+  position: relative;
+  background-color: white;
+}
 
+header {
+  /*position: fixed;*/
+  position:relative;
+  top:0;
+  left:0;
+  z-index: 9;
+  width:100vw;
+  border-bottom: 1px solid #0d339a;
+  transform: translate(0, 0)
+}
+
+
+header .inner {
+  height: 60px;
+  width: 100vw;
+  font-size: 16px;
+}
+
+header .main-menu{
+  position:absolute;
+  display:flex;
+  width:100%;
+  height:100%;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  font-weight: bold;
+  align-items: center;
+  justify-content: center;
+}
+
+header .main-menu .blank{
+  display:flex;
+  align-items:center;
+  padding-left:25px;
+  width: calc(100vw / 3);
+  height:60px;
+}
+
+header .main-menu .wrap_category{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  width: calc(100vw / 3);
+  height: inherit;
+}
+
+header .main-menu .wrap_othermain{
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  width: calc(100vw / 3);
+}
+
+header .main-menu .wrap_category .main_category{
+  padding:4px 4px 19px 4px;
+  margin-top:15px;
+  margin-right:10px;
+  margin-left:10px;
+  height:22px;
+  color:black;
+}
+
+header .main-menu .wrap_category .main_category_mypage{
+  padding:4px 4px 19px 4px;
+  margin-top:15px;
+  margin-right:10px;
+  margin-left:10px;
+  height:22px;
+  color:black;
+}
+
+/*추가부분*/
+header .main-menu .wrap_category .main_category_name{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  width:105px;
+}
+
+@media (max-width: 820px) {
   header .inner {
-    height: 60px;
-    width: 100vw;
-    font-size: 16px;
+    width:820px;
+    left:0;
+    top:0;
   }
-  
-  header .main-menu{
-    position:absolute;
-    display:flex;
-    width:100%;
-    height:100%;
-    top:50%;
-    left:50%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    font-weight: bold;
-    align-items: center;
-    justify-content: center;
-  }
-  
+}
+
+/*@media (min-width: 1920px) {
   header .main-menu .blank{
-    display:flex;
-    align-items:center;
-    padding-left:25px;
-    width: calc(100vw / 3);
-    height:60px;
+    width: 640px !important;
   }
-  
+
   header .main-menu .wrap_category{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    width: calc(100vw / 3);
-    height: inherit;
+    width: 640px;
   }
 
   header .main-menu .wrap_othermain{
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    width: calc(100vw / 3);
+    width: 640px;
   }
-  
-  header .main-menu .wrap_category .main_category{
-    padding:4px 4px 19px 4px;
-    margin-top:15px;
-    margin-right:10px;
-    margin-left:10px;
-    height:22px;
-    color:black;
-  }
-  
-  header .main-menu .wrap_category .main_category_mypage{
-    padding:4px 4px 19px 4px;
-    margin-top:15px;
-    margin-right:10px;
-    margin-left:10px;
-    height:22px;
-    color:black;
-  }
+}*/
+/**/
 
-  /*추가부분*/
-  header .main-menu .wrap_category .main_category_name{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    width:80px;
-  }
+header .main-menu .wrap_category .main_category_community{
+  padding:4px 4px 19px 4px;
+  margin-top:15px;
+  margin-right:10px;
+  margin-left:10px;
+  height:22px;
+  color:black;
+}
 
-  @media (max-width: 820px) {
-    header .inner {
-      width:820px;
-      left:0;
-      top:0;
-    }
-  }
 
-  /*@media (min-width: 1920px) {
-    header .main-menu .blank{
-      width: 640px !important;
-    }
+header .main-menu .main_category .profile{
+  display:flex;
+  padding: 0px 25px 0px 0px;
+}
 
-    header .main-menu .wrap_category{
-      width: 640px;
-    }
+header .main-menu .main_category .profile .profile_pic_alter {
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  width:24px;
+  height:24px;
+}
 
-    header .main-menu .wrap_othermain{
-      width: 640px;
-    }
-  }*/
-  /**/
+header .main-menu .main_category .profile .user_nickname {
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  width:117px;
+  height:24px;
+}
 
-  header .main-menu .wrap_category .main_category_community{
-    padding:4px 4px 19px 4px;
-    margin-top:15px;
-    margin-right:10px;
-    margin-left:10px;
-    height:22px;
-    color:black;
-  }
-  
-  
-  header .main-menu .main_category .profile{
-    display:flex;
-    padding: 0px 25px 0px 0px;
-  }
-  
-  header .main-menu .main_category .profile .profile_pic_alter {
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    width:24px;
-    height:24px;
-  }
+header .main-menu .login_register {
+  display:flex;
+  padding: 0px 0px 0px 25px;
+}
 
-  header .main-menu .main_category .profile .user_nickname {
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    width:117px;
-    height:24px;
-  }
+header .main-menu .login_register .login_button {
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background-color: #0d339a;
+  color:white;
+  width:65px;
+  height:30px;
+  border-radius:9px;
+  font-size:12px;
+  margin-right:8px;
+}
 
-  header .main-menu .login_register {
-    display:flex;
-    padding: 0px 0px 0px 25px;
-  }
+header .main-menu .login_register .register_button {
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background-color: #0d339a;
+  color:white;
+  width:65px;
+  height:30px;
+  margin-left:5px;
+  border-radius:9px;
+  font-size:12px;
+}
 
-  header .main-menu .login_register .login_button {
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    background-color: #0d339a;
-    color:white;
-    width:65px;
-    height:30px;
-    border-radius:9px;
-    font-size:12px;
-    margin-right:8px;
-  }
+header .main-menu .search{
+  position: relative;
+  height: 30px;
+}
 
-  header .main-menu .login_register .register_button {
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    background-color: #0d339a;
-    color:white;
-    width:65px;
-    height:30px;
-    margin-left:5px;
-    border-radius:9px;
-    font-size:12px;
-  }
+header .main-menu .search input{
+  width: 36px;
+  height: 30px;
+  padding: 4px 10px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  border-radius: 5px;
+  outline: none;
+  background-color: #fff;
+  color: #777;
+  font-size: 12px;
+  transition: width .4s;
+}
 
-  header .main-menu .search{
-    position: relative;
-    height: 30px;
-  }
-  
-  header .main-menu .search input{
-    width: 36px;
-    height: 30px;
-    padding: 4px 10px;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-    border-radius: 5px;
-    outline: none;
-    background-color: #fff;
-    color: #777;
-    font-size: 12px;
-    transition: width .4s;
-  }
-  
-  header .main-menu .search input:focus{
-    width: 190px;
-    border-color: #ea9926;
-  }
-  
-  header .main-menu .search .material-icons {
-    height: 24px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 5px;
-    margin: auto;
-    transition: .4s;
-  }
-  
-  header .main-menu .search.focused .material-icons {
-    opacity: 0;
-  }
-  /* 여기까지 inner */
+header .main-menu .search input:focus{
+  width: 190px;
+  border-color: #ea9926;
+}
 
-  /*달력용 css*/
+header .main-menu .search .material-icons {
+  height: 24px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 5px;
+  margin: auto;
+  transition: .4s;
+}
+
+header .main-menu .search.focused .material-icons {
+  opacity: 0;
+}
+/* 여기까지 inner */
+
+/*달력용 css*/
 td.saturday{
   color:blue;
 }
@@ -262,12 +262,12 @@ header .sub_category_mypage {
   background-color: #0d339a;
   left:0;
   top:100%;
-  transition : height .4s;  
+  transition : height .4s;
 }
 
 header .sub_category_mypage.hide{
   height:0;
-} 
+}
 
 header .sub_category_mypage .wrap_sub_category_mypage {
   display:none;
@@ -295,12 +295,30 @@ header .sub_category_community {
   background-color: #0d339a;
   left:0;
   top:100%;
-  transition : height .4s;  
+  transition : height .4s;
+}
+
+/* 커뮤니티 서브메뉴 */
+header .sub_category_department {
+  display:flex;
+  position:absolute;
+  align-items:center;
+  justify-content:center;
+  width:100%;
+  height:60px;
+  background-color: #0d339a;
+  left:0;
+  top:100%;
+  transition : height .4s;
 }
 
 header .sub_category_community.hide{
   height:0;
-} 
+}
+
+header .sub_category_department.hide{
+  height:0;
+}
 
 header .sub_category_community .wrap_sub_category_community {
   display:none;
@@ -314,6 +332,17 @@ header .sub_category_community .wrap_sub_category_community .sub_menu_content {
 }
 /* 커뮤니티 서브메뉴 css */
 
+header .sub_category_department .wrap_sub_category_department {
+  display:none;
+  justify-content:center;
+  align-items:center;
+}
+
+header .sub_category_department .wrap_sub_category_department .sub_menu_content {
+  padding:10px 25px 10px 25px;
+  color:white;
+}
+/* 커뮤니티 서브메뉴 css */
 
 /*아이콘으로 된 버튼들 css */
 .homebutton {
