--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -103,7 +103,7 @@ a:active{
     display:flex;
     justify-content:center;
     align-items:center;
-    width:80px;
+    width:105px;
   }
 
   @media (max-width: 820px) {
@@ -298,9 +298,27 @@ header .sub_category_community {
   transition : height .4s;  
 }
 
+/* 커뮤니티 서브메뉴 */
+header .sub_category_department {
+  display:flex;
+  position:absolute;
+  align-items:center;
+  justify-content:center;
+  width:100%;
+  height:60px;
+  background-color: #0d339a;
+  left:0;
+  top:100%;
+  transition : height .4s;
+}
+
 header .sub_category_community.hide{
   height:0;
-} 
+}
+
+header .sub_category_department.hide{
+  height:0;
+}
 
 header .sub_category_community .wrap_sub_category_community {
   display:none;
@@ -314,6 +332,17 @@ header .sub_category_community .wrap_sub_category_community .sub_menu_content {
 }
 /* 커뮤니티 서브메뉴 css */
 
+header .sub_category_department .wrap_sub_category_department {
+  display:none;
+  justify-content:center;
+  align-items:center;
+}
+
+header .sub_category_department .wrap_sub_category_department .sub_menu_content {
+  padding:10px 25px 10px 25px;
+  color:white;
+}
+/* 커뮤니티 서브메뉴 css */
 
 /*아이콘으로 된 버튼들 css */
 .homebutton {
