--- a/src/main/resources/css/header.css
+++ b/src/main/resources/css/header.css
@@ -61,15 +61,16 @@ header .main-menu .blank{
   display:flex;
   align-items:center;
   padding-left:25px;
-  width: calc(100vw / 3);
+  width: 30vw;
   height:60px;
+  box-sizing:border-box;
 }
 
 header .main-menu .wrap_category{
   display:flex;
   justify-content: center;
   align-items: center;
-  width: calc(100vw / 3);
+  width: 40vw;
   height: inherit;
 }
 
@@ -77,7 +78,8 @@ header .main-menu .wrap_othermain{
   display: flex;
   justify-content: right;
   align-items: center;
-  width: calc(100vw / 3);
+  width: 30vw;
+  height:inherit;
 }
 
 header .main-menu .wrap_category .main_category{
@@ -106,9 +108,9 @@ header .main-menu .wrap_category .main_category_name{
   width:105px;
 }
 
-@media (max-width: 820px) {
+@media (max-width: 1096px) {
   header .inner {
-    width:820px;
+    width:1096px;
     left:0;
     top:0;
   }
@@ -138,6 +140,14 @@ header .main-menu .wrap_category .main_category_community{
   color:black;
 }
 
+header .main-menu .wrap_category .main_category_department{
+  padding:4px 4px 19px 4px;
+  margin-top:15px;
+  margin-right:10px;
+  margin-left:10px;
+  height:22px;
+  color:black;
+}
 
 header .main-menu .main_category .profile{
   display:flex;
