--- a/src/main/resources/templates/fragments/header-after.html
+++ b/src/main/resources/templates/fragments/header-after.html
@@ -53,7 +53,7 @@
                         </div>
                     </li>
                     <li class="main_category_department">
-                        <a href="/board/board_collection" class="main_category_name">
+                        <a href="/board/board_department_collection" class="main_category_name">
                             학과 커뮤니티
                         </a>
                         <div class="sub_category_department hide">
@@ -66,10 +66,10 @@
                     </li>
                 </ul>
                 <div class="wrap_othermain">
-                    <div class="search">
-                        <input type="text" />
-                        <span class="material-icons">search</span>
-                    </div>
+<!--                    <div class="search">-->
+<!--                        <input type="text" />-->
+<!--                        <span class="material-icons">search</span>-->
+<!--                    </div>-->
                     <a href="/mypage/alert" class="notification">
                         <span class="material-icons-outlined">notifications</span>
                     </a>
