--- a/src/main/resources/templates/fragments/header-before.html
+++ b/src/main/resources/templates/fragments/header-before.html
@@ -51,7 +51,7 @@
                         </div>
                     </li>
                     <li class="main_category_department">
-                        <a href="/board/board_collection" class="main_category_name">
+                        <a href="/board/board_department_collection" class="main_category_name">
                             학과 커뮤니티
                         </a>
                         <div class="sub_category_department hide">
@@ -64,10 +64,10 @@
                     </li>
                 </ul>
                 <div class="wrap_othermain">
-                    <div class="search">
-                        <input type="text" />
-                        <span class="material-icons">search</span>
-                    </div>
+<!--                    <div class="search">-->
+<!--                        <input type="text" />-->
+<!--                        <span class="material-icons">search</span>-->
+<!--                    </div>-->
                     <div class="login_register">
                         <a href="/login" class="login_button">로그인</a>
                         <a href="/register/register" class="register_button">회원가입</a>
