--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -44,7 +44,7 @@
         </div>
         <div class="loginfunction">
             <div class="loginmaintain">
-                <p><input type="checkbox">로그인 유지</p>
+<!--                <p><input type="checkbox">로그인 유지</p>-->
             </div>
             <div class="idpw">
                 <a href="javascript:void(0)" class="aidpw">아이디/비밀번호 찾기</a>
