--- a/src/main/resources/templates/personal_info/personal_info_change.html
+++ b/src/main/resources/templates/personal_info/personal_info_change.html
@@ -59,7 +59,7 @@
                     <div class="title">
                         계정
                     </div>
-                    <a href="javascript:void(0)" class="account_content_div">
+                    <a href="/personal_info/certification" class="account_content_div">
                         학교 인증
                     </a>
                     <a href="/personal_info/pwd_change" class="account_content_div">
