--- a/src/main/resources/static/css/board_reading_normal.css
+++ b/src/main/resources/static/css/board_reading_normal.css
@@ -136,6 +136,16 @@ body{
     margin-bottom:16px;
   }
 
+.wrap_price_div {
+  display:flex;
+  justify-content:left;
+  align-items:center;
+  width:870px;
+  font-weight:bold;
+  font-size:14px;
+  margin-bottom:15px;
+}
+
   .wrap_mainframe .mainframe .main_content .content_body .body_main .bonmoon{
     font-size:14px;
     margin-bottom:16px;
