--- a/src/main/resources/templates/fragments/header-after.html
+++ b/src/main/resources/templates/fragments/header-after.html
@@ -66,10 +66,10 @@
                     </li>
                 </ul>
                 <div class="wrap_othermain">
-<!--                    <div class="search">-->
-<!--                        <input type="text" />-->
-<!--                        <span class="material-icons">search</span>-->
-<!--                    </div>-->
+                    <div class="search">
+                        <input type="text" />
+                        <span class="material-icons">search</span>
+                    </div>
                     <a href="/mypage/alert" class="notification">
                         <span class="material-icons-outlined">notifications</span>
                     </a>
