--- a/src/main/resources/templates/fragments/header-before.html
+++ b/src/main/resources/templates/fragments/header-before.html
@@ -64,10 +64,10 @@
                     </li>
                 </ul>
                 <div class="wrap_othermain">
-<!--                    <div class="search">-->
-<!--                        <input type="text" />-->
-<!--                        <span class="material-icons">search</span>-->
-<!--                    </div>-->
+                    <div class="search">
+                        <input type="text" />
+                        <span class="material-icons">search</span>
+                    </div>
                     <div class="login_register">
                         <a href="/login" class="login_button">로그인</a>
                         <a href="/register/register" class="register_button">회원가입</a>
