--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -36,9 +36,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollToPlugin.min.js" integrity="sha512-tQFq+nb/TSS648SDzWbSj0A67t4I1PFzR0U6Oi/yEYFyUbAIwg74SOCbr7t2X1Rn+iln7sYwfh8y+z7p0gddOw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script defer src="/js/main.js"></script>
-    <script defer src="/js/header.js"></script>
     <script defer src="/js/calendar.js"></script>
-    <script defer src="/js/timeTableMain..js"></script>
+    <script defer src="/js/timeTableMain.js"></script>
 </head>
 <body>
 <header th:if="${loggedIn}">
