학교 학과 게시판 분류 분리 및 예외처리, 랭킹보드 학과는 집계 안되게 변경

--- a/src/main/resources/templates/personal_info/certification.html
+++ b/src/main/resources/templates/personal_info/certification.html
@@ -31,7 +31,8 @@
     <div class="wrap_mainframe">
         <div class="mainframe">
             <div class="content">
-                <span>인증은 모바일에서 가능합니다.</span>
+                <span>인증이 필요합니다.<br>
+                인증은 모바일에서 가능합니다.</span>
             </div>
         </div>
     </div>
