--- a/src/main/resources/templates/board/writing/write.html
+++ b/src/main/resources/templates/board/writing/write.html
@@ -71,7 +71,7 @@
                             <input type="submit" class="writing_completion" value="글 작성">
                         </div>
                     </div>
-                    <input id="fileEntity" class="fileEntity" type="hidden" multiple accept="*/*" name="fileEntity"/>
+                    <input id="fileEntity" class="fileEntity" type="file" multiple accept="*/*" name="imageFiles"/>
                 </div>
             </form>
         </div>
